--- a/src/Settings.css
+++ b/src/Settings.css
@@ -1,8 +1,8 @@
 .navBar {
-    margin: 20px 30px
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
 }
-
-
 
 
 .slider {
@@ -45,13 +45,13 @@
     background-color: #03a469;
     border: none;
     color: white;
-    padding: 20px;
+    padding: 30px;
     opacity: 1;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 4px 40px;
     border-radius: 10px;
 
     transition: all 0.2;
