--- a/src/Bars.css
+++ b/src/Bars.css
@@ -1,13 +1,34 @@
 #bars-container {   
-    border-color: black;
-    border-style: solid;
-    border-width: 2px;
-    align-items: center;
+    margin-top: 20px;
     margin: auto;
-    width: 50%;
-    height: 400px;
+    padding: 0;
+    width: 60%;
+    height: 70vh;
+    display: flex;
+    align-items: top;
+    list-style: none;
+
+
+  
+    
+    
     
 
+}
 
+.arrayBar {
+    background-color: #1abc9c;
+    border-radius: 5px;
+    border-color:black;
+    border-style: solid;
+    border-width: 1px;
+    flex-grow: 1;
+    margin: 0;
+
+
+    border-top-left-radius: 0% 50%;
+    border-top-right-radius: 0% 50%;
+    
+    
     
 }
